--- a/WebAPI.API/appsettings.Development.json
+++ b/WebAPI.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=WebAPIDb;User Id=sa;Password=YourPassword123;TrustServerCertificate=True;",
+    "Redis": "localhost:6379"
   }
 }
