--- a/WebAPI.API/appsettings.json
+++ b/WebAPI.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=WebAPIDb;User Id=sa;Password=YourPassword123;TrustServerCertificate=True;",
     "Redis": "localhost:6379"
   },
   "Jwt": {
