--- a/WebAPI.API/appsettings.Development.json
+++ b/WebAPI.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=WebAPIDb;User Id=sa;Password=YourPassword123;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=WebAPIDb;Trusted_Connection=True;",
     "Redis": "localhost:6379"
   }
 }
