--- a/WebAPI.API/appsettings.json
+++ b/WebAPI.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=WebAPIDb;User Id=sa;Password=YourPassword123;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=WebAPIDb;Trusted_Connection=True;",
     "Redis": "localhost:6379"
   },
   "Jwt": {
